[Fix](MessageList): timestamp is at the forefront when scrolling on smaller screens

--- a/src/components/MessageList/styles.scss
+++ b/src/components/MessageList/styles.scss
@@ -19,8 +19,8 @@
     }
 
     &__timestamp {
+      color: rgba($color-dark-grey, 0.8);
       margin-left: 0.4rem;
-      opacity: 0.7;
     }
 
     &__inner,
